bynkc/tests/fixtures/negative/295_match_bool_non_exhaustive/input.bynk
commons demo {
  fn f(x: Bool) -> Int {
    match x {
      true => 1
    }
  }
}
